--- a/style/style_homepage.css
+++ b/style/style_homepage.css
@@ -103,7 +103,7 @@ h1, h2, h3 {
 
 /* ----- Mise en page en tete ----- */
 .homepageHeader {
-  height: 50px;
+  height: 70px;
 }
 
 @media screen and (min-width: 600px) {
@@ -127,8 +127,8 @@ h1, h2, h3 {
 
 /* ----- Mise en page ligne de localisation ----- */
 .location {
-  height: 50px;
-  background-color: gainsboro;
+  height: 55px;
+  background-color: #e1e1e1;
   color: black;
   -webkit-box-shadow: inset 0 5px 4px -2px #c7c7c7;
           box-shadow: inset 0 5px 4px -2px #c7c7c7;
@@ -261,7 +261,7 @@ h1, h2, h3 {
 }
 
 .howToStep {
-  height: 85px;
+  height: 80px;
   width: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -338,7 +338,7 @@ h1, h2, h3 {
 }
 
 .stepText:hover {
-  background-color: #f4eefc;
+  background-color: #e4d5f6;
 }
 
 .stepText:hover i {
@@ -348,7 +348,7 @@ h1, h2, h3 {
 /* ----- Bloc restaurants ----- */
 .restaurants {
   padding: 60px 25px 50px 25px;
-  background-color: #ededed;
+  background-color: #f0f0f0;
 }
 
 .restaurants h2 {
@@ -370,7 +370,10 @@ h1, h2, h3 {
 
 @media screen and (min-width: 600px) {
   .restaurantsBox {
-    display: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
@@ -505,8 +508,8 @@ h1, h2, h3 {
   font-size: 1rem;
 }
 
-/* ----- Transition like ----- */
-#emptyHeart {
+/* ----- Transition like_restaurant1 ----- */
+#emptyHeart1, #emptyHeart2, #emptyHeart3, #emptyHeart4 {
   margin-top: 25px;
   margin-right: 20px;
   position: relative;
@@ -516,26 +519,26 @@ h1, h2, h3 {
   display: block;
 }
 
-#fullHeart {
+#fullHeart1, #fullHeart2, #fullHeart3, #fullHeart4 {
   margin-top: 25px;
   margin-right: 20px;
   height: 25px;
 }
 
-.Like #fullHeart {
+.Like #fullHeart1, .Like #fullHeart2, .Like #fullHeart3, .Like #fullHeart4 {
   opacity: 0;
 }
 
-.Like #emptyHeart {
+.Like #emptyHeart1, .Like #emptyHeart2, .Like #emptyHeart3, .Like #emptyHeart4 {
   opacity: 1;
 }
 
-.Like:hover #emptyHeart {
+.Like:hover #emptyHeart1, .Like:hover #emptyHeart2, .Like:hover #emptyHeart3, .Like:hover #emptyHeart4 {
   display: none;
   opacity: 0;
 }
 
-.Like:hover #fullHeart {
+.Like:hover #fullHeart1, .Like:hover #fullHeart2, .Like:hover #fullHeart3, .Like:hover #fullHeart4 {
   display: block;
   opacity: 1;
   -webkit-transition: opacity 2s ease-in;
@@ -544,7 +547,7 @@ h1, h2, h3 {
 
 /* ----- Mise en page pied de page ----- */
 footer {
-  background-color: #4a4a4a;
+  background-color: #3d3d3d;
 }
 
 footer h3, footer a, footer i {
@@ -557,34 +560,25 @@ footer h3 {
   padding: 20px 20px 10px 20px;
 }
 
-@media screen and (min-width: 600px) {
-  footer h3 {
-    font-size: 1.6rem;
-  }
-}
-
 footer li {
-  font-size: 0.9rem;
+  font-size: 1.1rem;
   font-weight: 300;
   margin-left: 15px;
   padding: 5px;
 }
 
-@media screen and (min-width: 600px) {
-  footer li {
-    font-size: 1.3rem;
-  }
-}
-
 footer i {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   width: 21px;
   margin: 0 5px 0 0;
 }
 
 @media screen and (min-width: 600px) {
-  footer i {
-    font-size: 1.1rem;
+  footer h3 {
+    font-size: 1.4rem;
+  }
+  footer li {
+    font-size: 1.2rem;
   }
 }
 /*# sourceMappingURL=style_homepage.css.map */
