--- a/style/style_page_le_delice_des_sens.scss
+++ b/style/style_page_le_delice_des_sens.scss
@@ -102,7 +102,7 @@ h1, h2, h3{
 }
 
 .le_delice_des_sens{
-    background-image: url(../style/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg)
+    background-image: url(images/Restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg)
 }
 
 /* ----- Nom du restaurant + like ----- */
