--- a/style/style_page_la_palette_du_gout.css
+++ b/style/style_page_la_palette_du_gout.css
@@ -82,7 +82,7 @@ h1, h2, h3 {
 }
 
 .la_palette_du_gout {
-  background-image: url(../style/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
+  background-image: url(images/Restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
 }
 
 /* ----- Nom du restaurant + like ----- */
