--- a/style/style_page_la_note_enchantee.scss
+++ b/style/style_page_la_note_enchantee.scss
@@ -102,7 +102,7 @@ h1, h2, h3{
 }
 
 .la_note_enchantee{
-    background-image: url(../style/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg)
+    background-image: url(images/Restaurants/stil-u2Lp8tXIcjw-unsplash.jpg)
 }
 
 /* ----- Nom du restaurant + like ----- */
