--- a/style/style_page_a_la_francaise.css
+++ b/style/style_page_a_la_francaise.css
@@ -82,7 +82,7 @@ h1, h2, h3 {
 }
 
 .a_la_francaise {
-  background-image: url(../style/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg);
+  background-image: url(images/Restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg);
 }
 
 /* ----- Nom du restaurant + like ----- */
