--- a/style/style_page_la_palette_du_gout.css
+++ b/style/style_page_la_palette_du_gout.css
@@ -339,7 +339,7 @@ h1, h2, h3 {
           transform: rotate(360deg);
 }
 
-.dishOptions:hover .Dish_Price {
+.dishOptions:hover .dishPrice {
   -webkit-transform: translateX(-72px);
           transform: translateX(-72px);
 }
