--- a/style/style_page_la_palette_du_gout.scss
+++ b/style/style_page_la_palette_du_gout.scss
@@ -305,7 +305,7 @@ h1, h2, h3{
         transform: rotate(360deg);
     }
 
-    &:hover .Dish_Price{
+    &:hover .dishPrice{
         transform: translateX(-$checkTransitionWidth);
     }
 
